[gd_scene load_steps=3 format=2]

[ext_resource path="res://level 3 wall .png" type="Texture" id=1]
[ext_resource path="res://Level Select.gd" type="Script" id=2]

[node name="Level Select" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect" type="TextureRect" parent="."]
margin_right = 40.0
margin_bottom = 40.0
texture = ExtResource( 1 )

[node name="CenterContainer" type="CenterContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = 40.0
margin_bottom = 40.0

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer"]
margin_left = 489.0
margin_top = 241.0
margin_right = 574.0
margin_bottom = 399.0

[node name="Label" type="Label" parent="CenterContainer/VBoxContainer"]
margin_right = 85.0
margin_bottom = 14.0
text = "Select a level"

[node name="1" type="Button" parent="CenterContainer/VBoxContainer"]
margin_top = 18.0
margin_right = 85.0
margin_bottom = 38.0
text = "1"

[node name="2" type="Button" parent="CenterContainer/VBoxContainer"]
margin_top = 42.0
margin_right = 85.0
margin_bottom = 62.0
text = "2"

[node name="3" type="Button" parent="CenterContainer/VBoxContainer"]
margin_top = 66.0
margin_right = 85.0
margin_bottom = 86.0
text = "3"

[node name="4" type="Button" parent="CenterContainer/VBoxContainer"]
margin_top = 90.0
margin_right = 85.0
margin_bottom = 110.0
text = "4"

[node name="5" type="Button" parent="CenterContainer/VBoxContainer"]
margin_top = 114.0
margin_right = 85.0
margin_bottom = 134.0
text = "5"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="6" type="Button" parent="CenterContainer/VBoxContainer"]
margin_top = 138.0
margin_right = 85.0
margin_bottom = 158.0
text = "6"
[connection signal="pressed" from="CenterContainer/VBoxContainer/1" to="." method="_on_1_pressed"]
[connection signal="pressed" from="CenterContainer/VBoxContainer/2" to="." method="_on_2_pressed"]
[connection signal="pressed" from="CenterContainer/VBoxContainer/3" to="." method="_on_3_pressed"]
[connection signal="pressed" from="CenterContainer/VBoxContainer/4" to="." method="_on_4_pressed"]
[connection signal="pressed" from="CenterContainer/VBoxContainer/5" to="." method="_on_5_pressed"]
[connection signal="pressed" from="CenterContainer/VBoxContainer/6" to="." method="_on_6_pressed"]
